# ActionRelay

./: .gitignore  PROJECT.md  README.md  project.idevice.yml  project.minimal.yml  project.yml
.github/workflows/: ci.yml  idevice-link.yml
app/: ActionRelay.entitlements  Info.plist
app/ActionRelay/: ActionRelayApp.swift  LaunchScreen.storyboard
app/ActionRelay/Config/: ConfigView.swift
app/ActionRelay/Listener/: Classifier.swift  Dispatcher.swift  KeepAlive.swift  ListenerService.swift  RelayClient.swift  TunnelBringup.swift
app/ActionRelay/Pairing/: DocumentPicker.swift  PairingView.swift
app/ActionRelay/Shared/: Shared.swift
app/ActionRelay/Status/: StatusView.swift  TunnelManager.swift
core/: Cargo.toml
core/src/: classifier.rs  ffi.rs  lib.rs  relay.rs
docs/: integration.md  pairing.md  signal.md
scripts/: build_unsigned_ipa.sh  fetch_idevice.sh
tunnel/: Classifier.swift  Dispatcher.swift  Info.plist  PacketTunnelProvider.swift  RelayClient.swift  Tunnel.entitlements
